Try being less dependent on correct PacketContext, fix some respack gen weirdness around versions, tweak StandaloneWebServerProvider to be more reliable hopefully, ElementHolder fixes